--- a/provisioning/roles/discourse/templates/app.yml
+++ b/provisioning/roles/discourse/templates/app.yml
@@ -17,12 +17,12 @@ params:
 
 env:
   # comma-separated emails
-  DISCOURSE_DEVELOPER_EMAILS: 'my_email@example.com'
+  DISCOURSE_DEVELOPER_EMAILS: 'contact@oaf.org.au'
   # CHANGE ME to your hostname
-  DISCOURSE_HOSTNAME: 'www.example.com'
+  DISCOURSE_HOSTNAME: 'discourse.{{ server_name }}'
   # SET ME to your smtp server eg mandrill
   # don't forget to set mail
-  DISCOURSE_SMTP_ADDRESS: smtp.example.com          # (mandatory)
+  DISCOURSE_SMTP_ADDRESS: localhost          # (mandatory)
   # DISCOURSE_SMTP_PORT: 587                        # (optional)
   # DISCOURSE_SMTP_USER_NAME: user@example.com      # (optional)
   # DISCOURSE_SMTP_PASSWORD: p@ssword               # (optional)
