disable swap creation for the time being

--- a/provisioning/roles/redis/meta/main.yml
+++ b/provisioning/roles/redis/meta/main.yml
@@ -1,3 +1,4 @@
 ---
 dependencies:
-  - { role: swap }
+  # Commenting out swap for the time being as linode seems to have swap already set up
+  #- { role: swap }
