Allow use of static IP configuration on provisioned servers.
We do this by not managing the interfaces file and moving the firewall
loading to another place.

Fixes #326

--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -114,4 +114,4 @@
 - name: Add firewall rules
   copy: src=iptables.rules dest=/etc/iptables.rules
 - name: Add firewall rules on boot
-  copy: src=interfaces dest=/etc/network/interfaces
+  copy: src=iptablesload dest=/etc/network/if-pre-up.d/iptablesload
