Also include mbstring PHP extension. Fixes #428

--- a/default_files/php/composer.json
+++ b/default_files/php/composer.json
@@ -9,6 +9,7 @@
         "openaustralia/scraperwiki": "dev-morph_defaults",
         "ext-sqlite3": "*",
         "ext-pdo_sqlite": "*",
-        "ext-gd": "*"
+        "ext-gd": "*",
+        "ext-mbstring": "*"
     }
 }
