Provisioning fix creation of directory and rvm now needs gpg key installed

--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -4,7 +4,7 @@
 - name: Ensure git is installed
   apt: pkg=git
 - name: Ensure that deploy owns /var/www
-  file: owner=deploy group=deploy path=/var/www
+  file: owner=deploy group=deploy path=/var/www state=directory
 - name: Ensure that ssl/www directory exist
   file: path=/etc/nginx/ssl/www owner=deploy group=deploy state=directory
 - name: Ensure that ssl/faye directory exist
