Reinstate helpful comment in playbook.yml

--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -7,6 +7,7 @@
 #
 - hosts: all
   sudo: true
+  # Comment the line below out when deploying via vagrant (for local development VM)
   user: root
   roles:
     - morph-app
