Add script for adding/removing iptables rules

--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -120,3 +120,9 @@
   copy: src=iptables.rules dest=/etc/iptables.rules
 - name: Add firewall rules on boot and make sure they're executable
   copy: src=iptablesload dest=/etc/network/if-pre-up.d/iptablesload mode=0755
+
+- name: iptables add script
+  copy: src=add_iptables_rules.sh dest=/usr/local/bin mode=0755
+
+- name: iptables remove script
+  copy: src=remove_iptables_rules.sh dest=/usr/local/bin mode=0755
