Enable docker memory and swap accounting. Fixes #461

--- a/provisioning/roles/docker-server/tasks/main.yml
+++ b/provisioning/roles/docker-server/tasks/main.yml
@@ -13,3 +13,15 @@
   apt_repository: repo='deb http://get.docker.io/ubuntu docker main'
 - name: Ensure that the docker package is installed
   apt: pkg=lxc-docker
+
+- name: Enable memory and swap accounting
+  lineinfile:
+    dest: /etc/default/grub
+    regexp: GRUB_CMDLINE_LINUX=
+    line: GRUB_CMDLINE_LINUX="cgroup_enable=memory swapaccount=1"
+  register: docker_grub_change
+
+# TODO Reboot server
+- name: Update grub
+  command: update-grub
+  when: docker_grub_change|changed
