Update URL that was 404ing

--- a/provisioning/roles/backups/tasks/main.yml
+++ b/provisioning/roles/backups/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Add the Percona repository key
-  apt_key: url=http://keys.gnupg.net/pks/lookup?search=0x1C4CBDCDCD2EFD2A&fingerprint=on&op=get id=CD2EFD2A
+  apt_key: url=http://keys.gnupg.net/pks/lookup?op=get&search=0x1C4CBDCDCD2EFD2A id=CD2EFD2A
 - name: Add the Percona sources
   apt_repository: repo='deb http://repo.percona.com/apt precise main'
 - name: Install percona xtrabackup
