Only attempt to start Discourse after it's first bootstrapped
The launcher's exit code is 1 when attempting to start an already
running Discourse so the Ansible task fails.

Fixes #498

--- a/provisioning/roles/discourse/handlers/main.yml
+++ b/provisioning/roles/discourse/handlers/main.yml
@@ -1,3 +1,5 @@
 ---
 - name: restart nginx
   service: name=nginx state=restarted
+- name: start discourse
+  command: ./launcher start app chdir=/var/docker
