--- a/provisioning/roles/morph-app/meta/main.yml
+++ b/provisioning/roles/morph-app/meta/main.yml
@@ -9,4 +9,5 @@ dependencies:
   - { role: newrelic-sysmond }
   - { role: discourse }
   - { role: mitmproxy }
-  - { role: f500.elasticsearch }
+  - role: f500.elasticsearch
+    elasticsearch_network_host: localhost
