Remove stopped containers every 5 minutes

--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -88,6 +88,10 @@
   cron: name="xml sitemaps" hour=16 user=deploy job="cd /var/www/current && /home/deploy/.rvm/bin/rvm . do bundle exec rake sitemap:refresh RAILS_ENV=production"
   when: cron_jobs
 
+- name: Cron job to clean out stopped containers every 5 minutes
+  cron: name="stopped container" minute="*/5" user=deploy job="cd /var/www/current && /home/deploy/.rvm/bin/rvm . do bundle exec rake app:remove_stopped_containers RAILS_ENV=production"
+  when: cron_jobs
+
 - name: Install nodejs for asset precompiling
   apt: pkg=nodejs
 - name: Install memcached
