--- a/provisioning/roles/docker-server/tasks/main.yml
+++ b/provisioning/roles/docker-server/tasks/main.yml
@@ -1,18 +1,39 @@
 ---
 - name: Ensure that we're running Linux kernel 3.8
-  apt: pkg=linux-image-generic-lts-raring update_cache=yes cache_valid_time=3600
+  apt: pkg=linux-image-generic-lts-trusty update_cache=yes cache_valid_time=3600
   notify:
   - reboot the server
+
 - name: Ensure that new Linux headers are installed
-  apt: pkg=linux-headers-generic-lts-raring
-- name: Ensure that we have the Docker repository key
-  apt_key: url=https://get.docker.io/gpg id=A88D21E9
-- name: Ensure that pycurl is installed (for ansible)
-  apt: pkg=python-pycurl
-- name: Ensure that we have the docker repository
-  apt_repository: repo='deb http://get.docker.io/ubuntu docker main'
-- name: Ensure that the docker package is installed
-  apt: pkg=lxc-docker
+  apt: pkg=linux-headers-generic-lts-trusty
+
+# For Linode we need to do some special stuff to get this kernel to be used
+- name: Remove grub2
+  apt: pkg=grub2 state=absent
+
+- name: Remove grub-pc
+  apt: pkg=grub-pc state=absent
+
+- name: Install grub
+  apt: pkg=grub state=present
+
+- name: Add grub menu
+  copy: src=menu.lst dest=/boot/grub/menu.lst
+  register: docker_grub_change
+
+# TODO Reboot server
+- name: Update grub
+  command: update-grub
+  when: docker_grub_change|changed
+
+#- name: Ensure that we have the Docker repository key
+#  apt_key: url=https://get.docker.io/gpg id=A88D21E9
+#- name: Ensure that pycurl is installed (for ansible)
+#  apt: pkg=python-pycurl
+#- name: Ensure that we have the docker repository
+#  apt_repository: repo='deb http://get.docker.io/ubuntu docker main'
+#- name: Ensure that the docker package is installed
+#  apt: pkg=lxc-docker
 
 # This isn't the right way to do things on Linode
 #
@@ -22,8 +43,3 @@
 #     regexp: GRUB_CMDLINE_LINUX=
 #     line: GRUB_CMDLINE_LINUX="cgroup_enable=memory swapaccount=1"
 #   register: docker_grub_change
-#
-# # TODO Reboot server
-# - name: Update grub
-#   command: update-grub
-#   when: docker_grub_change|changed
