--- a/provisioning/roles/docker-server/tasks/main.yml
+++ b/provisioning/roles/docker-server/tasks/main.yml
@@ -26,6 +26,12 @@
   command: update-grub
   when: docker_grub_change|changed
 
+# Now you need to make some changes on the Linode console
+# 1. change the Linode configuration profile to use pv-grub-x86_64
+# 2. In Filesystem/Boot Helpers section disable the Xenify distro option
+# 3. Save changes
+# 4. Reboot from the Dashboard tab
+
 #- name: Ensure that we have the Docker repository key
 #  apt_key: url=https://get.docker.io/gpg id=A88D21E9
 #- name: Ensure that pycurl is installed (for ansible)
