--- a/provisioning/roles/morph-app/meta/main.yml
+++ b/provisioning/roles/morph-app/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 dependencies:
-  - { role: docker-server }
+  - { role: docker-server-linode }
   - { role: nginx-passenger }
   - { role: ruby-2.0.0-p353 }
   - { role: mysql }
