Ensure elasticsearch is set to start on boot. Fixes #517

--- a/provisioning/roles/f500.elasticsearch/tasks/main.yml
+++ b/provisioning/roles/f500.elasticsearch/tasks/main.yml
@@ -19,3 +19,8 @@
   when: elasticsearch_logging_template is defined and elasticsearch_logging_template|length
   notify:
     - restart elasticsearch
+
+- name: Ensure Elasticsearch is configured to start on boot
+  service:
+    name: elasticsearch
+    enabled: yes
