--- a/default_files/ruby/template/Gemfile
+++ b/default_files/ruby/template/Gemfile
@@ -1,5 +1,5 @@
-source 'https://rubygems.org'
+source "https://rubygems.org"
 
-ruby '2.0.0'
+ruby "2.0.0"
 
-gem 'scraperwiki', git: "https://github.com/openaustralia/scraperwiki-ruby.git", branch: "morph_defaults"
+gem "scraperwiki", git: "https://github.com/openaustralia/scraperwiki-ruby.git", branch: "morph_defaults"
