--- a/default_files/ruby/template/Gemfile
+++ b/default_files/ruby/template/Gemfile
@@ -3,3 +3,4 @@ source "https://rubygems.org"
 ruby "2.0.0"
 
 gem "scraperwiki", git: "https://github.com/openaustralia/scraperwiki-ruby.git", branch: "morph_defaults"
+gem "mechanize"
