--- a/default_files/python/template/requirements.txt
+++ b/default_files/python/template/requirements.txt
@@ -1,3 +1,7 @@
+# It's easy to add more libraries or choose different versions. Any libraries
+# specified here will be installed and made available to your morph.io scraper.
+# Find out more: https://morph.io/documentation/python
+
 #BeautifulSoup==4.2.0
 
 # Custom version of scraperwiki library
