--- a/default_files/ruby/template/Gemfile
+++ b/default_files/ruby/template/Gemfile
@@ -1,3 +1,7 @@
+# It's easy to add more libraries or choose different versions. Any libraries
+# specified here will be installed and made available to your morph.io scraper.
+# Find out more: https://morph.io/documentation/ruby
+
 source "https://rubygems.org"
 
 ruby "2.0.0"
