--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 rvm:
   - 2.0.0
-env: SECRET_KEY_BASE=859384 RUN_SLOW_TESTS=true
+env: SECRET_KEY_BASE=859384 RUN_SLOW_TESTS=true DONT_RUN_DOCKER_TESTS=true
 
 before_script:
   - cp config/database.travis.yml config/database.yml
