Use monit to monitor sidekiq worker

--- a/provisioning/roles/morph-app/handlers/main.yml
+++ b/provisioning/roles/morph-app/handlers/main.yml
@@ -10,3 +10,6 @@
   notify: Restart morph service
 - name: Restart morph service
   service: name=morph state=restarted
+
+- name: reload monit
+  service: name=monit state=reloaded
