--- a/provisioning/roles/morph-app/files/monit_sidekiq.conf
+++ b/provisioning/roles/morph-app/files/monit_sidekiq.conf
@@ -4,8 +4,8 @@
 #
 
 check process sidekiq
-  with pidfile /var/www/shared/tmp/pids/sidekiq.pid
-  start program = "/etc/init.d/sidekiq start"
-  stop  program = "/etc/init.d/sidekiq stop"
+  with pidfile /var/www/shared/tmp/pids/morph-worker-1.pid
+  start program = "/sbin/start morph-worker-1"
+  stop  program = "/sbin/stop morph-worker-1"
   if totalcpu is greater than 80% for 2 cycles then restart
   if totalmemory is greater than 1500 MB for 2 cycles then restart
