Run interactive mitmproxy for testing

--- a/docker_images/morph-mitmdump/Makefile
+++ b/docker_images/morph-mitmdump/Makefile
@@ -2,3 +2,6 @@ all: build
 
 build:
 	docker build -t openaustralia/morph-mitmdump .
+
+run: build
+	docker run -i -t -p 8080:8080 openaustralia/morph-mitmdump
