--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -127,6 +127,12 @@
 - name: iptables remove script
   copy: src=iptables-morph-remove dest=/usr/local/sbin mode=0755
 
+- name: iptables add script
+  copy: src=iptables-morph-add-new dest=/usr/local/sbin mode=0755
+
+- name: iptables remove script
+  copy: src=iptables-morph-remove-new dest=/usr/local/sbin mode=0755
+
 - name: run iptables morph setup script at boot
   copy: src=interfaces dest=/etc/network/interfaces
 
